--- a/Wizcard/Podfile
+++ b/Wizcard/Podfile
@@ -8,6 +8,10 @@ target 'Wizcard' do
   # Pods for Wizcard
 
   pod 'CountryPickerSwift', '1.4.5'
+  pod 'Alamofire'
+  pod 'AlamofireImage'
+  pod 'SwiftyJSON'
+  pod 'ReachabilitySwift'
 
   target 'WizcardTests' do
     inherit! :search_paths
