--- a/Wizcard/Wizcard/Info.plist
+++ b/Wizcard/Wizcard/Info.plist
@@ -77,5 +77,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>$(PRODUCT_NAME) need your camera acceess to take photos</string>
+	<key>NSCameraUsageDescription</key>
+	<string>$(PRODUCT_NAME) need your camera acceess to take photos</string>
 </dict>
 </plist>
