Video thumbnail updated

--- a/Wizcard/Podfile
+++ b/Wizcard/Podfile
@@ -13,6 +13,8 @@ target 'Wizcard' do
   pod 'SwiftyJSON'
   pod 'ReachabilitySwift'
   pod 'LinkedinSwift', '~> 1.7.5'
+  pod 'FBSDKLoginKit'
+  pod 'FacebookCore'
 
   target 'WizcardTests' do
     inherit! :search_paths
