--- a/Wizcard/Wizcard/Info.plist
+++ b/Wizcard/Wizcard/Info.plist
@@ -28,6 +28,14 @@
 				<string>li4121744</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb1920343268198627</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
@@ -45,6 +53,8 @@
 			</dict>
 		</array>
 	</dict>
+	<key>FacebookAppID</key>
+	<string>1920343268198627</string>
 	<key>LIAppId</key>
 	<string>4121744</string>
 	<key>LSRequiresIPhoneOS</key>
@@ -54,8 +64,12 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>$(PRODUCT_NAME) need your camera acceess to take photos</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>$(PRODUCT_NAME) need your location access to track your position</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>$(PRODUCT_NAME) need your camera acceess to take photos</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -77,9 +91,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>$(PRODUCT_NAME) need your camera acceess to take photos</string>
-	<key>NSCameraUsageDescription</key>
-	<string>$(PRODUCT_NAME) need your camera acceess to take photos</string>
 </dict>
 </plist>
