Facebook and twitter is working fine now...

--- a/Wizcard/Podfile
+++ b/Wizcard/Podfile
@@ -16,6 +16,9 @@ target 'Wizcard' do
   pod 'FacebookCore'
   pod 'FBSDKLoginKit'
   pod 'AWSS3'
+  pod 'IQKeyboardManagerSwift'
+  pod ‘TwitterKit’, ‘~> 3.0'
+
   
 
   target 'WizcardTests' do
