--- a/Wizcard/Wizcard/Info.plist
+++ b/Wizcard/Wizcard/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.53</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -34,6 +34,14 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>fb1920343268198627</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>twitterkit-fPTSaC1Zoul1I0pK78sOZLKvv</string>
 			</array>
 		</dict>
 	</array>
@@ -57,6 +65,11 @@
 	<string>1920343268198627</string>
 	<key>LIAppId</key>
 	<string>4121744</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>twitter</string>
+		<string>twitterauth</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
