--- a/Wizcard/Wizcard/Info.plist
+++ b/Wizcard/Wizcard/Info.plist
@@ -46,7 +46,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>2</string>
+	<string>3</string>
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
@@ -69,6 +69,7 @@
 	<array>
 		<string>twitter</string>
 		<string>twitterauth</string>
+		<string>fbauth2</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
